--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ethers": "^6.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
